Added code for launch screen

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#2D3748",
+  "theme_color": "#4FD1C5",
   "background_color": "#4FD1C5"
 }
